--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,61 @@
 body {
-  text-align: center;
+  background-color: linear-gradient(to top, #d299c2 0%, #fef9d7 100%);
 }
+
+.container {
+  background-color: rgb(234, 206, 215);
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 30px;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+  margin: 50px auto;
+  border-radius: 10px;
+}
+.city {
+  display: flex;
+  margin: 20px 0;
+  justify-content: space-between;
+  border-bottom: 1px dashed grey;
+  padding: 20px 0;
+}
+
+.city:last-child {
+  border: none;
+}
+
+.time {
+  font-size: 36px;
+  font-weight: bold;
+}
+.time small {
+  font-size: 18px;
+  vertical-align: middle;
+  line-height: 36px;
+}
+
+.date {
+  text-align: center;
+  opacity: 0.7;
+}
+
+select {
+  display: block;
+  width: 100%;
+  font-size: 19px;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+h1 {
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 36px;
+}
+h2 {
+  margin: 20px;
+}
+
 footer {
+  margin: 20px;
   text-align: center;
 }
