--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 body {
-  background-color: linear-gradient(to top, #d299c2 0%, #fef9d7 100%);
+  background: radial-gradient(
+    circle at 10% 20%,
+    rgb(239, 246, 249) 0%,
+    rgb(206, 239, 253) 90%
+  );
 }
 
 .container {
